refactored some parts to functions

--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -21,7 +21,7 @@
             </ul>
         <p>Feel free to hop on the sofa and watch one of the following movies</p>
         <p>
-            <ul class="ui list" style="list-style-type:none">
+            <ul class="ui list">
                 {% for movie in recommendations %}
                     <li class="item">{{ movie }}</li>
                 {% endfor %}
